manifests/apps/gitea/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: login-redirect-keycloak
spec:
  redirectRegex:
    regex: ^(https?://[^/]+)/user/login(\?.*)?$
    replacement: ${1}/user/oauth2/keycloak${2}
    permanent: false
